@@ -1,6 +1,8 @@
 DIST authconfig-6.1.11.tar.bz2 623602 RMD160 40f0378553b2db5d1a9143339e3c7a54ebf84360 SHA1 7c0ebdf119311d5d2ca57a748b0b84594ca888bb SHA256 fb9f40a1f2928e8420f2e1c6a6f6974a0c02560df76a891fbb7dccc0e49d53d4
 DIST authconfig-6.1.12.tar.bz2 624043 RMD160 9dafa3fc4d1f58cb45edc06bd27deefc321e19d3 SHA1 177495129bcb7bd0d4a26afad3204d7a851ec187 SHA256 0a4f990d13affe855efeb857ec56781e6d447c483051b5e3d1ffd7e2bc999446
+DIST authconfig-6.1.13.tar.bz2 624616 RMD160 1d6cf4dd8db8e53599941e6e872003d9d9f4de51 SHA1 4c2fcbfb07ee948ca9b38c7f695c96f4ecec0012 SHA256 eb077d54d8352e96121f1ca16d5d15a9c28e34d91ae7614d837c8fbe33e3d1bd
 EBUILD acutil-6.1.11.ebuild 830 RMD160 2686908733dfa56da52621081708b5119dabfbce SHA1 439082fa85b8b4acf8017e8c9daf666c22ae74d6 SHA256 395c4135ca36f528ba25bc79ae364967002e610c9f053b8003eb1bfbfc01c897
 EBUILD acutil-6.1.12.ebuild 830 RMD160 20c1ac721aa58945ef5452840e63296417f38c3f SHA1 16f28bd0ee5d0f4461ec8626095e86e26b228682 SHA256 3f989d0e8679a8d934cb4c230ed9d8719f40ee689559b2e1ee9036e5541bad72
-MISC ChangeLog 1482 RMD160 5ec9f94fb46001f85554c0bea8fc1404f31abcd6 SHA1 3a385d0344cdb0d8725e339900bf5bcf2dc31db9 SHA256 67590b1e58261679c2448c336a56862bdc9e59abd8957b0eca2388a1d5b354ae
+EBUILD acutil-6.1.13.ebuild 860 RMD160 8548edd6dc95860d74c423823ed12fd7c30a7af2 SHA1 fdefd6cbdb5c17416532fd21dd46e2944987589d SHA256 7125a0c26f8f0db6a11bdfa775e5ab31c4381315967920590e60a6ce7a4fe111
+MISC ChangeLog 1596 RMD160 13c5422fc585c5cbe0e2d08dac06e2354b32a377 SHA1 aab316251926ef91e12ef3501669b35df2809d7f SHA256 b7fbdb4636a714ed9545e92f439e0dc5140a71502a3cdc6dfe205d341e06adbb
 MISC metadata.xml 709 RMD160 26d2fa4257f021f5731b158f37ce28e1558d97e2 SHA1 8d40ff3611414c8477e6729deed970e8be348be7 SHA256 9924673180a21100ca72a07d64b77735785d22160e1811dc32297a7b07abca8b
