@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*acutil-6.1.13 (21 Mar 2011)
+
+  21 Mar 2011; A. Vinogradov <spamslepnoga@inbox.ru> +acutil-6.1.13.ebuild:
+  bump
+
 *acutil-6.1.12 (24 Jan 2011)
 
   24 Jan 2011; A. Vinogradov <spamslepnoga@inbox.ru> +acutil-6.1.12.ebuild:
